# telegram_knowledge_base

./: .env.example  .gitignore  .mcp.json  .windsurfrules  AGENTS.md  CHANGELOG.md  DEPLOYMENT_TARGET.md  GIT_WORKFLOW.md  PROD_READINESS_CHECKLIST.md  README.md  SESSION_HANDOFF_2026-03-25.md  TASKS.md  alembic.ini  docker-compose.yml  env.production.example  llms.txt  pyproject.toml  tz-tg_db.md
.codex/: config.toml
.kilocode/: mcp.json
LAYER-1/: checklist-phase2.md  rules.md
LAYER-3/: HANDOFF.md  lessons.md
docs/: BRANCH_PROTECTION_TEST_2026-03-28.md  DEPLOY_RUNBOOK.md  INCIDENT_2026-03-29_TELEGRAM_DNS_LOOPBACK.md  NEXT_SESSION_2026-03-30_UI_GUIDED_STATUS.md  RELEASE_NOTES_POLICY.md  RESTORE_RUNBOOK.md  RUNTIME_RELIABILITY_RUNBOOK.md  RUNTIME_RELIABILITY_RUNBOOK_WINDOWS.md  SECRETS_RUNBOOK.md  SESSION_HANDOFF_2026-03-30_UI_GUIDED_STATUS.md  SESSION_RECAP_2026-03-27_SECTION5_UAT_RU.md  SESSION_RECAP_2026-04-24_PROXIFIER_AUDIT.md  UAT_SECTION5_TEMPLATE.md  UAT_SECTION5_TEMPLATE_RU.md
instructions/: POSTGRES_SERVICE_INCIDENT_RU.md  PROJECT_INSTRUCTION.md
manual operation/: p2-003-semantic-search-usage-acceptance-git-cycle-2026-04-23.md
scripts/: register_autostart_task.ps1  release_smoke.ps1  run_watchdog_hidden.pyw  runtime_healthcheck.sh  runtime_healthcheck_local.ps1  runtime_watchdog_restart.ps1  section5_local_smoke.ps1  start_bot_local.ps1  verify_prod_env.ps1  webhook_smoke.ps1
tests/: test_admin_api.py  test_backup_parsing.py  test_backup_records_migration.py  test_backup_service.py  test_collection_parsing.py  test_db_migration_seed.py  (+32 more)
(+133 files in other folders)
