[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-kb-bot"
version = "0.1.0"
description = "Single-user Telegram knowledge base bot MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.6.0,<4.0.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg[binary]>=3.3.0,<4.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.7,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py312"
